Revert canvas top:20% shift - fix global layout misalignment

--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ body {
 
 #canvas-container {
   position: fixed;
-  top: 20%;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -695,7 +695,7 @@ body {
   /* 地球全屏底层 */
   #canvas-container {
     position: fixed;
-    top: 20%; left: 0;
+    top: 0; left: 0;
     width: 100%; height: 100%;
     z-index: 1;
   }
